src/OpenCvSharp/Internal/Interop/NativeMethods.XImgProc.LibraryImport.cs

#if NET7_0_OR_GREATER
using System;
using System.Runtime.InteropServices;

namespace OpenCvSharp.Internal.Interop
{
    internal static partial class NativeMethods
    {
        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ni_black_threshold")]
        internal static partial int XImgProcNiBlackThreshold(IntPtr src, IntPtr dst, double maxValue, int type, int blockSize, double k, int binarizationMethod, double r);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_thinning")]
        internal static partial int XImgProcThinning(IntPtr src, IntPtr dst, int thinningType);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_anisotropic_diffusion")]
        internal static partial int XImgProcAnisotropicDiffusion(IntPtr src, IntPtr dst, float alpha, float k, int niters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_joint_bilateral_filter")]
        internal static partial int XImgProcJointBilateralFilter(IntPtr joint, IntPtr src, IntPtr dst, int d, double sigmaColor, double sigmaSpace, int borderType);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_guided_filter_run")]
        internal static partial int XImgProcGuidedFilter(IntPtr guide, IntPtr src, IntPtr dst, int radius, double eps, int dDepth, double scale);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_rolling_guidance_filter")]
        internal static partial int XImgProcRollingGuidanceFilter(IntPtr src, IntPtr dst, int d, double sigmaColor, double sigmaSpace, int numOfIter, int borderType);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_weighted_median_filter")]
        internal static partial int XImgProcWeightedMedianFilter(IntPtr joint, IntPtr src, IntPtr dst, int r, double sigma, int weightType, IntPtr mask);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_dt_filter")]
        internal static partial int XImgProcDtFilter(IntPtr guide, IntPtr src, IntPtr dst, double sigmaSpatial, double sigmaColor, int mode, int numIters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_am_filter")]
        internal static partial int XImgProcAmFilter(IntPtr joint, IntPtr src, IntPtr dst, double sigmaS, double sigmaR, int adjustOutliers);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_bilateral_texture_filter")]
        internal static partial int XImgProcBilateralTextureFilter(IntPtr src, IntPtr dst, int fr, int numIter, double sigmaAlpha, double sigmaAvg);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_preserving_filter")]
        internal static partial int XImgProcEdgePreservingFilter(IntPtr src, IntPtr dst, int d, double threshold);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_global_smoother_filter_run")]
        internal static partial int XImgProcFastGlobalSmootherFilterRun(IntPtr guide, IntPtr src, IntPtr dst, double lambda, double sigmaColor, double lambdaAttenuation, int numIter);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_l0_smooth")]
        internal static partial int XImgProcL0Smooth(IntPtr src, IntPtr dst, double lambda, double kappa);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_hough_transform")]
        internal static partial int XImgProcFastHoughTransform(IntPtr src, IntPtr dst, int dstMatDepth, int angleRange, int op, int makeSkew);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_hough_point_to_line")]
        internal static partial int XImgProcHoughPointToLine(int houghX, int houghY, IntPtr srcImgInfo, int angleRange, int makeSkew, int rules, out int x1, out int y1, out int x2, out int y2);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_pei_lin_normalization")]
        internal static partial int XImgProcPeiLinNormalization(IntPtr src, IntPtr dst);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_guided_filter_create")]
        internal static partial int XImgProcGuidedFilterCreate(IntPtr guide, int radius, double eps, double scale, out IntPtr filter);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_guided_filter_release_handle")]
        internal static partial void XImgProcGuidedFilterReleaseHandle(IntPtr filter);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_guided_filter_filter")]
        internal static partial int XImgProcGuidedFilterFilter(IntPtr filter, IntPtr src, IntPtr dst, int dDepth);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_global_smoother_filter_create")]
        internal static partial int XImgProcFastGlobalSmootherFilterCreate(IntPtr guide, double lambda, double sigmaColor, double lambdaAttenuation, int numIter, out IntPtr filter);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_global_smoother_filter_release_handle")]
        internal static partial void XImgProcFastGlobalSmootherFilterReleaseHandle(IntPtr filter);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_global_smoother_filter_filter")]
        internal static partial int XImgProcFastGlobalSmootherFilterFilter(IntPtr filter, IntPtr src, IntPtr dst);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_slic_create")]
        internal static partial int XImgProcSuperpixelSLICCreate(IntPtr image, int algorithm, int regionSize, float ruler, out IntPtr superpixel);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_slic_release_handle")]
        internal static partial void XImgProcSuperpixelSLICReleaseHandle(IntPtr superpixel);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_slic_get_number")]
        internal static partial int XImgProcSuperpixelSLICGetNumber(IntPtr superpixel, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_slic_iterate")]
        internal static partial int XImgProcSuperpixelSLICIterate(IntPtr superpixel, int numIterations);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_slic_get_labels")]
        internal static partial int XImgProcSuperpixelSLICGetLabels(IntPtr superpixel, IntPtr labels);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_slic_get_label_contour_mask")]
        internal static partial int XImgProcSuperpixelSLICGetLabelContourMask(IntPtr superpixel, IntPtr image, int thickLine);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_slic_enforce_label_connectivity")]
        internal static partial int XImgProcSuperpixelSLICEnforceLabelConnectivity(IntPtr superpixel, int minElementSize);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_seeds_create")]
        internal static partial int XImgProcSuperpixelSEEDSCreate(int imageWidth, int imageHeight, int imageChannels, int numSuperpixels, int numLevels, int prior, int histogramBins, int doubleStep, out IntPtr superpixel);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_seeds_release_handle")]
        internal static partial void XImgProcSuperpixelSEEDSReleaseHandle(IntPtr superpixel);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_seeds_get_number")]
        internal static partial int XImgProcSuperpixelSEEDSGetNumber(IntPtr superpixel, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_seeds_iterate")]
        internal static partial int XImgProcSuperpixelSEEDSIterate(IntPtr superpixel, IntPtr image, int numIterations);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_seeds_get_labels")]
        internal static partial int XImgProcSuperpixelSEEDSGetLabels(IntPtr superpixel, IntPtr labels);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_seeds_get_label_contour_mask")]
        internal static partial int XImgProcSuperpixelSEEDSGetLabelContourMask(IntPtr superpixel, IntPtr image, int thickLine);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_lsc_create")]
        internal static partial int XImgProcSuperpixelLSCCreate(IntPtr image, int regionSize, float ratio, out IntPtr superpixel);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_lsc_release_handle")]
        internal static partial void XImgProcSuperpixelLSCReleaseHandle(IntPtr superpixel);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_lsc_get_number")]
        internal static partial int XImgProcSuperpixelLSCGetNumber(IntPtr superpixel, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_lsc_iterate")]
        internal static partial int XImgProcSuperpixelLSCIterate(IntPtr superpixel, int numIterations);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_lsc_get_labels")]
        internal static partial int XImgProcSuperpixelLSCGetLabels(IntPtr superpixel, IntPtr labels);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_lsc_get_label_contour_mask")]
        internal static partial int XImgProcSuperpixelLSCGetLabelContourMask(IntPtr superpixel, IntPtr image, int thickLine);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_superpixel_lsc_enforce_label_connectivity")]
        internal static partial int XImgProcSuperpixelLSCEnforceLabelConnectivity(IntPtr superpixel, int minElementSize);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_line_detector_create")]
        internal static partial int XImgProcFastLineDetectorCreate(int lengthThreshold, float distanceThreshold, double cannyTh1, double cannyTh2, int cannyApertureSize, int doMerge, out IntPtr detector);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_line_detector_release_handle")]
        internal static partial void XImgProcFastLineDetectorReleaseHandle(IntPtr detector);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_line_detector_detect")]
        internal static partial int XImgProcFastLineDetectorDetect(IntPtr detector, IntPtr image, IntPtr lines);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_line_detector_detect_count")]
        internal static partial int XImgProcFastLineDetectorDetectCount(IntPtr detector, IntPtr image, out int lineCount);
